--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "generate": "dfx generate icpsig_backend"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.18.1",
-    "@dfinity/candid": "^0.18.1",
-    "@dfinity/principal": "^0.18.1"
+    "@dfinity/agent": "^0.19.3",
+    "@dfinity/candid": "^0.19.3",
+    "@dfinity/principal": "^0.19.3"
   },
   "devDependencies": {
     "assert": "2.0.0",
@@ -37,7 +37,8 @@
     "webpack-dev-server": "^4.8.1"
   },
   "engines": {
-    "node": "^12 || ^14 || ^16 || ^18"
+    "node": "^12 || ^14 || ^16 || >=17",
+    "npm": "^7.17 || >=8"
   },
   "browserslist": [
     "last 2 chrome version",
