--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "engines": {
-    "node": "^12 || ^14 || ^16",
+    "node": "^12 || ^14 || ^16 || ^18",
     "npm": "^7.17 || >=8"
   },
   "browserslist": [
