--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "@frontend/*": ["./frontend/*"]
     },
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -20,5 +20,5 @@
     "jsx": "react",
     "baseUrl": "."
   },
-  "include": ["./frontend"]
+  "include": ["./frontend", "./custom.d.ts"]
 }
