--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "@ant-design/icons": "^5.3.0",
     "@connect2ic/core": "^0.1.1",
     "@connect2ic/react": "^0.1.0",
+    "@covalenthq/client-sdk": "^0.9.7",
     "@dfinity/agent": "^0.11.3",
     "@dfinity/ckbtc": "^2.3.0",
     "@dfinity/cketh": "^2.0.0",
     "@dfinity/ledger-icp": "^2.2.1",
     "@dfinity/ledger-icrc": "^2.2.0",
     "@dfinity/nns": "^3.1.1",
+    "@ethereumjs/common": "^4.3.0",
+    "@ethereumjs/tx": "^5.3.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@svgr/rollup": "^8.1.0",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
+    "ethers": "^5.7.0",
     "hi-base32": "^0.5.1",
     "lucide-react": "^0.325.0",
     "nanoid": "^5.0.6",
